# AM-VISION

./: .gitignore  README.md  package.xml  requirements.txt  setup.py  start_robot_vision.sh
config/: app.yaml
data/calibration/: default.json
data/recipes/: 1inch.json  1x2inch.json  default.json
robot_vision/: __main__.py  cli.py  config.py
robot_vision/camera/: __init__.py  astra_hybrid.py  base.py  manager.py  mock.py  opencv.py  orbbec.py  ros_astra.py
robot_vision/inspection/: __init__.py  calibration.py  engine.py  models.py  trigger.py
robot_vision/storage/: __init__.py  calibration.py  paths.py  recipes.py  reports.py  training.py
robot_vision/training/: __init__.py  hf_vision.py
robot_vision/web/: app.py
robot_vision/web/static/: app.js  index.html  styles.css
scripts/: Start Robot Vision.desktop  deploy_to_jetson.ps1  install_training_deps_jetson.sh  setup_jetson_ssh_key.ps1  start_robot_vision_jetson.sh
tests/: test_calibration.py  test_camera.py  test_hf_vision_training.py  test_inspection.py  test_storage.py  test_trigger.py  test_web.py
