<?xml version="1.0"?>
<package format="3">
  <name>robot_vision</name>
  <version>0.1.0</version>
  <description>Jetson-hosted part inspection camera app with a browser UI and ROS2-ready packaging.</description>
  <maintainer email="csteinhauer@marvelsaws.com">Caleb Steinhauer</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>python3-numpy</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
